Subindo Fotos de Batismo e tirando palavra "Menu" das sugestões

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
         <button id="btn" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu"
-            aria-expanded="false">Menu<span class="tiras"></span></button>
+            aria-expanded="false"><span class="tiras"></span></button>
 
 
 
