--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -108,55 +108,123 @@
                 <div class="carousel-inner">
 
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto2 (2).jpeg" alt="Primeiro Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto18 (2).jpeg" alt="Primeiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto3.jpeg" alt="Segundo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto20.jpeg" alt="Segundo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto21.jpeg" alt="Terceiro Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto19.jpeg" alt="Quarto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto22.jpeg" alt="Quinto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto23.jpeg" alt="Sexto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto24.jpeg" alt="Sétimo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto25.jpeg" alt="Décimo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto26.jpeg" alt="Décimo - Primeiro Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto27.jpeg" alt="Décimo - Segundo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto28.jpeg" alt="Décimo - Terceiro Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto29.jpeg" alt="Décimo - Quarto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto30.jpeg" alt="Décimo - Quinto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto31.jpeg" alt="Décimo - Sexto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto32.jpeg" alt="Décimo - Sétimo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto33.jpeg" alt="Décimo - Oitavo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto34.jpeg" alt="Décimo - Nono Slide">
+                    </div><div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto35.jpeg" alt="Vigésimo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto36.jpeg" alt="Vigésimo - Primeiro Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto37.jpeg" alt="Vigésimo - Segundo Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto38.jpeg" alt="Vigésimo - Terceiro Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto39.jpeg" alt="Vigésimo - Quarto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto40.jpeg" alt="Vigésimo - Quinto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto2 (2).jpeg" alt="Vigésimo - Sexto Slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100 carousel-image" src="/Img/Foto3.jpeg" alt="Vigésimo - Sétimo Slide">
                     </div>
                     <div class="carousel-item active">
-                        <img class="w-100 carousel-image" src="/Img/Foto4.jpeg" alt="Terceiro Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto4.jpeg" alt="Vigésimo - Oitavo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto5.jpeg" alt="Quarto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto5.jpeg" alt="Vigésimo - Nono Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto6.jpeg" alt="Quinto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto6.jpeg" alt="Trigésimo - Primeiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto7.jpeg" alt="Sextp Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto7.jpeg" alt="Trigésimo - Segundo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto8.jpeg" alt="Sétimo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto8.jpeg" alt="Trigésimo - Terceiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto9.jpeg" alt="Oitavo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto9.jpeg" alt="Trigésimo - Quarto Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class=" w-100 carousel-image" src="/Img/Foto10.jpeg" alt="Nono Slide">
+                        <img class=" w-100 carousel-image" src="/Img/Foto10.jpeg" alt="Trigésimo - Quinto Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto11.jpeg" alt="DécimoSlide">
+                        <img class="w-100 carousel-image" src="/Img/Foto11.jpeg" alt="Trigésimo - Sexto Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto12.jpeg" alt="Décimo Primeiro Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto12.jpeg" alt="Trigésimo - Sétimo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto13.jpeg" alt="Décimo Terceiro Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto13.jpeg" alt="Trigésimo - Oitavo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto18.jpeg" alt="Décimo Oitavo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto18.jpeg" alt="Trigésimo - Nono Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto14.jpeg" alt="Décimo Quarto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto14.jpeg" alt="Quadragésimo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto15.jpeg" alt="Décimo Quinto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto15.jpeg" alt="Quadragésimo - Primeiro Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto16.jpeg" alt="Décimo Sexto Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto16.jpeg" alt="Quadragésimo - Segundo Slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100 carousel-image" src="/Img/Foto17.jpeg" alt="Décimo Sétimo Slide">
+                        <img class="w-100 carousel-image" src="/Img/Foto17.jpeg" alt="Quadragésimo - Terceiro Slide">
                     </div>
                     
                 </div>
